feat(domain):Domain Criada

--- a/src/Backend/MyStore.Domain/MyStore.Domain.csproj
+++ b/src/Backend/MyStore.Domain/MyStore.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="IRepository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="3.5.0" />
+  </ItemGroup>
+
 </Project>
