feat(api): finalização da camada de api

--- a/src/Backend/MyStore.API/appsettings.Development.json
+++ b/src/Backend/MyStore.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=localhost;Database=OrderSystemDB; Trusted_Connection=True; TrustServerCertificate=true;",
+    "MongoConnection": "mongodb://localhost:27017/"
+  },
+  "MongoDatabaseName": "OrderReadDB"
 }
