--- a/src/Backend/MyStore.API/MyStore.API.csproj
+++ b/src/Backend/MyStore.API/MyStore.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\Shared\MyStore.Communication\MyStore.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\MyStore.Exceptions\MyStore.Exceptions.csproj" />
     <ProjectReference Include="..\MyStore.Application\MyStore.Application.csproj" />
+    <ProjectReference Include="..\MyStore.Infrasctructure\MyStore.Infrasctructure.csproj" />
   </ItemGroup>
 
 </Project>
